# ubsh

./: .gitignore  .gitmodules  LICENSE  README.md  SPEC.md  meson.build  meson_options.txt
.github/workflows/: build_and_test.yml  clang-format_check.yml
include/: ast.h  charstream.h  color.h  command.h  lexer.h  logger.h  prompt.h  queue.h  token.h  token_recognition.h  unimplemented.h  utils.h  wordvec.h
include/ast/: ast.h  node_list.h  node_not.h  node_simple_command.h  node_value.h  parser.h
src/: charstream.c  command.c  lexer.c  main.c  prompt.c  queue.c  token.c  token_recognition.c  wordvec.c
src/ast/: ast.c  ast_value.c  ast_value.h  node_list.c  node_not.c  node_simple_command.c  node_value.c  node_value.h  parser.c
tests/: ast.c  charstream.c  lexer.c  queue.c  wordvec.c
